# bull

./: .dockerignore  .gitignore  PHASE0-STORAGE-STABILIZE.md  README.md  SYNC-ARCHITECTURE.md  TIGER-PORT-INVENTORY.md
BullAPI/: README.md  (+8 more)
Rust/core/: Cargo.toml  README.md
Rust/core/fixtures/: README.md  index.json
Rust/core/fixtures/owned/: history_complete_k10_motion_payload.fixture.json  history_complete_k21_motion_payload.fixture.json  history_complete_k24_normal_history_payload.fixture.json  history_complete_temperature_level_event_payload.fixture.json  live_identity_k10_motion_payload.fixture.json  live_identity_k21_motion_payload.fixture.json  live_identity_k24_normal_history_payload.fixture.json
Rust/core/fixtures/synthetic/: activity_candidates_packet_derived_windows.fixture.json  activity_candidates_packet_derived_windows.json  activity_sessions_pre_device_hand_derived.fixture.json  activity_sessions_pre_device_hand_derived.json  bull_v5_get_hello_frame.fixture.json  bull_v5_historical_k18_packet.fixture.json  bull_v5_historical_sync_gen5_dry_run_command_validation.fixture.json  bull_v5_historical_sync_gen5_dry_run_command_validation.json  bull_v5_k10_motion_summary_short.fixture.json  bull_v5_k21_motion_summary_short.fixture.json  bull_v5_r17_optical_summary.fixture.json  bull_v5_temperature_event.fixture.json  debug_ws_contract_valid.fixture.json  debug_ws_contract_valid.json  health_sync_dry_run_healthkit.fixture.json  health_sync_dry_run_healthkit.json  hrv_bull_v0_hand_derived.fixture.json  openwhoop_activity_health_sync_comparison.fixture.json  openwhoop_activity_health_sync_comparison.json  openwhoop_gen5_history_metadata_markers.fixture.json  openwhoop_gen5_history_metadata_markers.json  openwhoop_gen5_history_plan.fixture.json  openwhoop_gen5_history_plan.json  openwhoop_uuid_detection.fixture.json  openwhoop_uuid_detection.json  recovery_bull_v0_hand_derived.fixture.json  recovery_calibration_linear.fixture.json  recovery_calibration_linear.json  sanitized_corebluetooth_frame_batch.fixture.json  sanitized_corebluetooth_frame_batch.json  sleep_actigraphy_counts_sadeh_hand_derived.fixture.json  sleep_actigraphy_counts_sadeh_hand_derived.json  sleep_bull_v0_hand_derived.fixture.json  sleep_ggir_summary_hand_derived.fixture.json  sleep_ggir_summary_hand_derived.json  strain_bull_v0_hand_derived.fixture.json  (+1 more)
Rust/core/include/: bull_core_bridge.h
Rust/core/src/: activity_candidates.rs  activity_identity.rs  algorithm_compare.rs  baselines.rs  behavior_insights.rs  biometric_ingest.rs  bridge.rs  calibration.rs  capture_correlation.rs  capture_import.rs  capture_sanitize.rs  commands.rs  debug_ws.rs  debug_ws_server.rs  energy_rollup.rs  error.rs  exercise_detection.rs  export.rs  fixtures.rs  health_sync.rs  historical_sync.rs  lib.rs  local_health_validation.rs  metric_features.rs  metric_readiness.rs  metrics.rs  openwhoop_reference.rs  perf_budget.rs  ppg.rs  privacy_lint.rs  property_tests.rs  protocol.rs  readiness.rs  recovery_rollup.rs  reference.rs  report.rs  rr_hr_consistency.rs  sleep_staging.rs  sleep_validation.rs  step_counter.rs  (+7 more)
Rust/core/tests/: activity_candidates_tests.rs  activity_identity_tests.rs  algo_benchmark_tests.rs  algorithm_compare_tests.rs  bridge_tests.rs  calibration_tests.rs  capture_arrival_plan_cli_tests.rs  capture_correlation_tests.rs  capture_import_tests.rs  capture_sanitize_tests.rs  command_capture_plan_cli_tests.rs  command_tests.rs  debug_ws_tests.rs  energy_rollup_tests.rs  export_tests.rs  fake_ble_peripheral_tests.rs  fixture_tests.rs  health_sync_tests.rs  history_sync_tests.rs  ios_healthkit_boundary_tests.rs  local_health_validation_suite_cli_tests.rs  metric_feature_report_cli_tests.rs  metric_features_tests.rs  metric_input_readiness_cli_tests.rs  metric_readiness_tests.rs  metrics_tests.rs  perf_budget_tests.rs  privacy_lint_tests.rs  property_tests.rs  protocol_tests.rs  real_capture_engine_tests.rs  reference_runner_cli_tests.rs  reference_tests.rs  rr_hr_consistency_cli_tests.rs  rr_hr_consistency_tests.rs  sleep_validation_tests.rs  step_counter_tests.rs  step_motion_estimator_tests.rs  step_packet_discovery_tests.rs  storage_check_tests.rs  (+4 more)
(+349 files in other folders)
