[package]
name = "bull-core"
version = "0.2.0"
edition = "2024"
rust-version = "1.94"
description = "Rust protocol, evidence, validation, and local calculation core for Bull."
license = "UNLICENSED"

[lib]
name = "bull_core"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[[bin]]
name = "bull-bridge-serve"
path = "src/bin/bull-bridge-serve.rs"

[[bin]]
name = "bull-fixture-index"
path = "src/bin/bull-fixture-index.rs"

[[bin]]
name = "bull-parser-fixture-runner"
path = "src/bin/bull-parser-fixture-runner.rs"

[[bin]]
name = "bull-capture-import"
path = "src/bin/bull-capture-import.rs"

[[bin]]
name = "bull-capture-sqlite-import"
path = "src/bin/bull-capture-sqlite-import.rs"

[[bin]]
name = "bull-capture-sanitize"
path = "src/bin/bull-capture-sanitize.rs"

[[bin]]
name = "bull-capture-correlation"
path = "src/bin/bull-capture-correlation.rs"

[[bin]]
name = "bull-capture-arrival-plan"
path = "src/bin/bull-capture-arrival-plan.rs"

[[bin]]
name = "bull-metric-input-readiness"
path = "src/bin/bull-metric-input-readiness.rs"

[[bin]]
name = "bull-metric-feature-report"
path = "src/bin/bull-metric-feature-report.rs"

[[bin]]
name = "bull-local-health-validation-suite"
path = "src/bin/bull-local-health-validation-suite.rs"

[[bin]]
name = "bull-command-validator"
path = "src/bin/bull-command-validator.rs"

[[bin]]
name = "bull-command-capture-plan"
path = "src/bin/bull-command-capture-plan.rs"

[[bin]]
name = "bull-reference-algo-runner"
path = "src/bin/bull-reference-algo-runner.rs"

[[bin]]
name = "bull-algo-benchmark"
path = "src/bin/bull-algo-benchmark.rs"

[[bin]]
name = "bull-calibration-evaluator"
path = "src/bin/bull-calibration-evaluator.rs"

[[bin]]
name = "bull-health-sync-dry-run"
path = "src/bin/bull-health-sync-dry-run.rs"

[[bin]]
name = "bull-historical-sync-validator"
path = "src/bin/bull-historical-sync-validator.rs"

[[bin]]
name = "bull-sleep-v1-release-gate"
path = "src/bin/bull-sleep-v1-release-gate.rs"

[[bin]]
name = "bull-sleep-v1-evidence-folder"
path = "src/bin/bull-sleep-v1-evidence-folder.rs"

[[bin]]
name = "bull-sleep-v1-stability-validator"
path = "src/bin/bull-sleep-v1-stability-validator.rs"

[[bin]]
name = "bull-sleep-window-validator"
path = "src/bin/bull-sleep-window-validator.rs"

[[bin]]
name = "bull-sleep-stage-label-validator"
path = "src/bin/bull-sleep-stage-label-validator.rs"

[[bin]]
name = "bull-storage-check"
path = "src/bin/bull-storage-check.rs"

[[bin]]
name = "bull-raw-export"
path = "src/bin/bull-raw-export.rs"

[[bin]]
name = "bull-export-validator"
path = "src/bin/bull-export-validator.rs"

[[bin]]
name = "bull-debug-ws-contract"
path = "src/bin/bull-debug-ws-contract.rs"

[[bin]]
name = "bull-debug-ws-serve"
path = "src/bin/bull-debug-ws-serve.rs"

[[bin]]
name = "bull-ui-coverage-audit"
path = "src/bin/bull-ui-coverage-audit.rs"

[[bin]]
name = "bull-privacy-lint"
path = "src/bin/bull-privacy-lint.rs"

[[bin]]
name = "bull-property-test-suite"
path = "src/bin/bull-property-test-suite.rs"

[[bin]]
name = "bull-perf-budget"
path = "src/bin/bull-perf-budget.rs"

[[bin]]
name = "bull-rr-hr-consistency"
path = "src/bin/bull-rr-hr-consistency.rs"

[dependencies]
crc32fast = "1.4"
hex = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tungstenite = "0.28"
zip = "0.6"

[dev-dependencies]
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

# Server sidecar profile. The bull-bridge-serve process is long-lived and
# handles many requests in sequence; a panic on one malformed frame must be
# caught (see handle_bridge_request_json) and returned as an error response
# rather than aborting the whole process and failing every queued request
# behind it. catch_unwind only works when panics unwind, so this profile keeps
# unwinding (unlike release, which aborts to keep the iOS binary small).
[profile.server]
inherits = "release"
panic = "unwind"
# cache-bust 1782081495
